<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_full_player">

        <SeekBarPreference
            android:defaultValue="@integer/round_corner_radius"
            android:icon="@drawable/ic_rounded_corner"
            android:key="album_round_corner"
            android:layout="@layout/preference_seekbar"
            android:max="28"
            app:isPreferenceVisible="false"
            android:summary="@string/settings_album_round_corner_summary"
            android:title="@string/settings_album_round_corner"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_text_fields"
            android:key="bold_title"
            app:isPreferenceVisible="false"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_title_bold_summary"
            android:title="@string/settings_title_bold"
            android:widgetLayout="@layout/preference_switch_widget" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_format_align_center"
            android:key="centered_title"
            app:isPreferenceVisible="false"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_title_center_summary"
            android:title="@string/settings_title_center"
            android:widgetLayout="@layout/preference_switch_widget" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_colors"
            android:key="content_based_color"
            app:isPreferenceVisible="false"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_content_based_color_summary"
            android:title="@string/settings_content_based_color"
            android:widgetLayout="@layout/preference_switch_widget" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_draw_abstract"
            android:key="default_progress_bar"
            app:isPreferenceVisible="false"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_default_progress_bar_summary"
            android:title="@string/settings_default_progress_bar"
            android:widgetLayout="@layout/preference_switch_widget" />

        <Preference
            android:key="lyrics"
            android:layout="@layout/preference_basic"
            android:summary="@string/settings_lyrics_configuration_summary"
            android:title="@string/settings_lyrics_configuration"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>