<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/categories">
        <menu>
            <item
                android:id="@+id/songs"
                android:checkable="true"
                android:title="@string/category_songs"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/artists"
                android:checkable="true"
                android:icon="@drawable/artist_art"
                android:title="@string/category_artists"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/detailed_folders"
                android:checkable="true"
                android:icon="@drawable/folder_art"
                android:title="@string/folders"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/playlists"
                android:checkable="true"
                android:icon="@drawable/ic_playlist_play"
                android:title="@string/category_playlists"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item android:title="@string/operations">
        <menu>
            <item
                android:id="@+id/refresh"
                android:checkable="false"
                android:icon="@drawable/ic_refresh"
                android:title="@string/home_menu_refresh"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/shuffle"
                android:checkable="false"
                android:icon="@drawable/ic_shuffle"
                android:title="@string/home_menu_shuffle"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/search"
                android:checkable="false"
                android:icon="@drawable/ic_search"
                android:title="@string/home_menu_search"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/settings"
                android:checkable="false"
                android:icon="@drawable/settings_art"
                android:title="@string/home_menu_settings"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>