<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="lyric_bold"
        android:layout="@layout/preference_switch"
        android:summary="@string/settings_lyrics_bold_summary"
        android:title="@string/settings_lyrics_bold"
        android:widgetLayout="@layout/preference_switch_widget"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="lyric_center"
        android:layout="@layout/preference_switch"
        android:summary="@string/settings_lyrics_center_summary"
        android:title="@string/settings_lyrics_center"
        android:widgetLayout="@layout/preference_switch_widget"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        app:isPreferenceVisible="false"
        android:key="lyric_contrast"
        android:layout="@layout/preference_switch"
        android:summary="@string/settings_lyrics_contrast_summary"
        android:title="@string/settings_lyrics_contrast"
        android:widgetLayout="@layout/preference_switch_widget"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        app:isPreferenceVisible="false"
        android:key="lyric_multiline"
        android:layout="@layout/preference_switch"
        android:summary="@string/settings_lyrics_multiline_summary"
        android:title="@string/settings_lyrics_multiline"
        android:widgetLayout="@layout/preference_switch_widget"
        app:iconSpaceReserved="false" />

</PreferenceScreen>