<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_filters">

        <SeekBarPreference
            android:defaultValue="@integer/filter_default_sec"
            app:isPreferenceVisible="false"
            android:key="mediastore_filter"
            android:layout="@layout/preference_seekbar"
            android:max="120"
            android:title="@string/settings_mediastore_filter"
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true" />

        <Preference
            android:key="blacklist"
            android:layout="@layout/preference_basic"
            android:summary="@string/settings_blacklist_folder_summary"
            android:title="@string/settings_blacklist_folder"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        app:isPreferenceVisible="false"
        android:title="@string/settings_category_misc">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:isPreferenceVisible="false"
            android:key="autoplay"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_play_on_launch_summary"
            android:title="@string/settings_play_on_launch"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:isPreferenceVisible="false"
            android:key="trim_lyrics"
            android:layout="@layout/preference_switch"
            android:title="@string/settings_trim_lyrics"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="album_covers"
            app:isPreferenceVisible="false"
            android:layout="@layout/preference_switch"
            android:summary="@string/album_covers_enhance_desc"
            android:title="@string/album_covers_enhance"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>